--- a/Umergency/build.gradle
+++ b/Umergency/build.gradle
@@ -5,19 +5,20 @@ repositories {
 
 android {
     compileSdkVersion 20
-    buildToolsVersion "20"
-
+    buildToolsVersion '20'
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+    }
+    productFlavors {
     }
 }
 
