--- a/Umergency/build.gradle
+++ b/Umergency/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 repositories {
     mavenCentral()
 }
@@ -22,9 +22,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:19.0.0'
+    compile 'com.android.support:support-v4:20.0.0'
     compile 'com.android.support:gridlayout-v7:19.0.0'
-    compile 'com.android.support:appcompat-v7:19.0.0'
+    compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'org.jsoup:jsoup:+'
     compile 'com.joanzapata.android:android-iconify:+'
     compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
