--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 22 21:50:20 EDT 2014
-sdk.dir=C\:\\Users\\Dillon\\AppData\\Local\\Android\\android-studio\\sdk
+#Fri Jul 25 23:21:43 EDT 2014
+sdk.dir=C\:\\Users\\Samed\\AppData\\Local\\Android\\android-studio\\sdk
